--- a/view/index.html
+++ b/view/index.html
@@ -6,5 +6,9 @@
     <body>
         <h1>Home</h1>
         <p>This is simple paragraph</p>
+        <nav>
+            <a href="/home">Home</a>
+            <a href="/about">About</a>
+        </nav>
     </body>
 </html>
